// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddUserButton renders as disabled with explanatory tooltip when the selected user name is not in the list of possibilities 1`] = `
<WithStyles(Tooltip)
  placement="top"
  title="Please enter a registered user's email."
>
  <div>
    <PrimaryActionButton
      className="addButton"
      disabled={true}
      onClick={[Function]}
    >
      Add
    </PrimaryActionButton>
  </div>
</WithStyles(Tooltip)>
`;

exports[`AddUserButton when selected user is the current user renders as disabled with explanatory tooltip when the current user is not system admin 1`] = `
<WithStyles(Tooltip)
  placement="top"
  title="You can not add permissions for yourself."
>
  <div>
    <PrimaryActionButton
      className="addButton"
      disabled={true}
      onClick={[Function]}
    >
      Add
    </PrimaryActionButton>
  </div>
</WithStyles(Tooltip)>
`;

exports[`AddUserButton when selected user is the current user renders as not disabled when the current user is system admin 1`] = `
<WithStyles(Tooltip)
  placement="top"
  title=""
>
  <div>
    <PrimaryActionButton
      className="addButton"
      disabled={false}
      onClick={[Function]}
    >
      Add
    </PrimaryActionButton>
  </div>
</WithStyles(Tooltip)>
`;

exports[`AddUserButton when the selected user is not the current user renders as not disabled when the selected user name is in the list of possibilities 1`] = `
<WithStyles(Tooltip)
  placement="top"
  title=""
>
  <div>
    <PrimaryActionButton
      className="addButton"
      disabled={false}
      onClick={[Function]}
    >
      Add
    </PrimaryActionButton>
  </div>
</WithStyles(Tooltip)>
`;

exports[`AddUserPermissions renders pure component with correct props 1`] = `
<PureAddUserPermission
  classes={
    Object {
      "addButton": "AddUserPermission-addButton-6",
      "addUserPermission": "AddUserPermission-addUserPermission-1",
      "dropDownClosed": "AddUserPermission-dropDownClosed-2",
      "dropDownOpen": "AddUserPermission-dropDownOpen-3",
      "permissionsSelector": "AddUserPermission-permissionsSelector-4",
      "usersAutofill": "AddUserPermission-usersAutofill-5",
    }
  }
  currentUserId="current-user-id"
  currentUserSystemAdmin="current-user-system-admin"
  dispatch={[MockFunction dispatch]}
  permissionLevels={
    Array [
      "Admin",
      "User",
      "Viewer",
    ]
  }
  projectKey="testproj"
  selectedPermissions="Viewer"
  selectedUserName=""
  setSelectedPermissions={[Function]}
  setSelectedUserName={[Function]}
  users="users"
/>
`;

exports[`PermissionsSelector renders to match snapshot 1`] = `
<WithStyles(ForwardRef(TextField))
  className="permissionsSelector"
  label="Permissions"
  margin="dense"
  onChange={[Function]}
  select={true}
  value="Viewer"
  variant="outlined"
>
  <WithStyles(ForwardRef(MenuItem))
    key="Admin"
    value="Admin"
  >
    Admin
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    key="User"
    value="User"
  >
    User
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    key="Viewer"
    value="Viewer"
  >
    Viewer
  </WithStyles(ForwardRef(MenuItem))>
</WithStyles(ForwardRef(TextField))>
`;

exports[`PureAddUserPermission renders to match snapshot 1`] = `
<div
  className="addUserPermission"
>
  <UsersAutofill
    classes={
      Object {
        "addButton": "addButton",
        "addUserPermission": "addUserPermission",
        "dropDownClosed": "dropDownClosed",
        "dropDownOpen": "dropDownOpen",
        "permissionsSelector": "permissionsSelector",
        "usersAutofill": "usersAutofill",
      }
    }
    setSelectedUserName={[MockFunction]}
    userNames={
      Array [
        "Test User One",
        "Test User Two",
      ]
    }
  />
  <PermissionsSelector
    className="permissionsSelector"
    classes={
      Object {
        "addButton": "addButton",
        "addUserPermission": "addUserPermission",
        "dropDownClosed": "dropDownClosed",
        "dropDownOpen": "dropDownOpen",
        "permissionsSelector": "permissionsSelector",
        "usersAutofill": "usersAutofill",
      }
    }
    permissionLevels={
      Array [
        "Admin",
        "User",
        "Viewer",
      ]
    }
    selectedPermissions="Viewer"
    setSelectedPermissions={[MockFunction]}
  />
  <AddUserButton
    classes={
      Object {
        "addButton": "addButton",
        "addUserPermission": "addUserPermission",
        "dropDownClosed": "dropDownClosed",
        "dropDownOpen": "dropDownOpen",
        "permissionsSelector": "permissionsSelector",
        "usersAutofill": "usersAutofill",
      }
    }
    dispatch={[MockFunction]}
    onClickFn={[Function]}
    projectKey="projectKey"
    selectedPermissions="Viewer"
    selectedUserName=""
    userInformation={
      Array [
        Object {
          "name": "Test User One",
          "userId": "test-user-one",
        },
        Object {
          "name": "Test User Two",
          "userId": "test-user-two",
        },
      ]
    }
  />
</div>
`;

exports[`UsersAutofill renders to match snapshot 1`] = `
<div
  aria-expanded={false}
  aria-haspopup="listbox"
  aria-labelledby="downshift-0-label"
  aria-owns={null}
  className="usersAutofill"
  role="combobox"
>
  <WithStyles(ForwardRef(TextField))
    aria-activedescendant={null}
    aria-autocomplete="list"
    aria-controls={null}
    aria-labelledby="downshift-0-label"
    autoComplete="off"
    fullWidth={true}
    id="downshift-0-input"
    label="Add User"
    margin="dense"
    onBlur={[Function]}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="Type user's email..."
    value=""
    variant="outlined"
  />
  <UsersDropdown
    classes={
      Object {
        "addButton": "addButton",
        "addUserPermission": "addUserPermission",
        "dropDownClosed": "dropDownClosed",
        "dropDownOpen": "dropDownOpen",
        "permissionsSelector": "permissionsSelector",
        "usersAutofill": "usersAutofill",
      }
    }
    getItemProps={[Function]}
    getMenuProps={[Function]}
    inputValue=""
    isOpen={false}
    userNames={
      Array [
        "Test User One",
        "Test User Two",
      ]
    }
  />
</div>
`;

exports[`UsersDropdown renders only items containing the input value 1`] = `
<WithStyles(ForwardRef(Paper))
  className="dropDownOpen"
>
  <WithStyles(ForwardRef(MenuItem))
    item="Test User One"
    key="Test User One"
  >
    Test User One
  </WithStyles(ForwardRef(MenuItem))>
</WithStyles(ForwardRef(Paper))>
`;

exports[`UsersDropdown renders with correct class name when it is not open 1`] = `
<WithStyles(ForwardRef(Paper))
  className="dropDownClosed"
>
  <WithStyles(ForwardRef(MenuItem))
    item="Test User One"
    key="Test User One"
  >
    Test User One
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    item="Test User Two"
    key="Test User Two"
  >
    Test User Two
  </WithStyles(ForwardRef(MenuItem))>
</WithStyles(ForwardRef(Paper))>
`;

exports[`UsersDropdown renders with correct class name when it is open 1`] = `
<WithStyles(ForwardRef(Paper))
  className="dropDownOpen"
>
  <WithStyles(ForwardRef(MenuItem))
    item="Test User One"
    key="Test User One"
  >
    Test User One
  </WithStyles(ForwardRef(MenuItem))>
  <WithStyles(ForwardRef(MenuItem))
    item="Test User Two"
    key="Test User Two"
  >
    Test User Two
  </WithStyles(ForwardRef(MenuItem))>
</WithStyles(ForwardRef(Paper))>
`;

exports[`UsersDropdown renders with message when there are no items matching the input value 1`] = `
<WithStyles(ForwardRef(Paper))
  className="dropDownOpen"
>
  <WithStyles(ForwardRef(MenuItem))>
    No users match search.
  </WithStyles(ForwardRef(MenuItem))>
</WithStyles(ForwardRef(Paper))>
`;
